<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AnkiReview</string>

    <string name="card_style">Card Style</string>

    <string name="settings_toolbar_title">AnkiReview Preferences</string>

    <string name="pick_ease">Answer Card</string>

    <string name="ease_button_again">Again</string>
    <string name="ease_button_hard">Hard</string>
    <string name="ease_button_good">Good</string>
    <string name="ease_button_easy">Easy</string>

    <string name="reviewer_action_add_quicktag">Add Quicktag</string>
    <string name="reviewer_action_quicktag_prefix">Tag:</string>
    <string name="reviewer_action_mark">Mark</string>
    <string name="reviewer_action_mark_suspend">Mark and Suspend</string>
    <string name="reviewer_action_mark_bury">Mark and Bury</string>

    <string name="reviewer_action_ease_1">Answer Again</string>
    <string name="reviewer_action_ease_2">Answer Hard</string>
    <string name="reviewer_action_ease_3">Answer Good</string>
    <string name="reviewer_action_ease_4">Answer Easy</string>

    <string-array name="alignment_array">
        <item>Center</item>
        <item>Left</item>
        <item>Right</item>
    </string-array>


    <!-- deck display options strings -->
    <string name="review_deck_display_options">Choose Display Mode</string>
    <string name="review_deck_display_anki">
        Use Anki HTML/CSS rendering engine. You don\'t
    have to configure anything, however you won\'t be able to customize the appearance, colors, fonts and size from AnkiReview.
    Works for all decks.</string>

    <string name="review_deck_display_ankireview">
        Use AnkiReview rendering engine (doesn\'t use HTML). You can configure the appearance, color, fonts to your liking and
        question/answer are separately animated. Only works for simple text-based decks.
    </string>

    <string name="review_deck_display_teachermode">
        Use AnkiReview rendering engine, with selectable teacher photos. As if a teacher was asking you questions! Only works for simple text-based decks.
    </string>

    <string name="review_cardstyle_not_defined_title">Card Style not defined</string>
    <string name="review_cardstyle_not_defined_description">
        Couldn\'t find a style for this card. AnkiReview doesn\'t use the Anki HTML/CSS
        card template, you must define your style inside AnkiReview. After doing so,
        you will be able to review this card.</string>

    <string name="card_style_create_ok">OK</string>
    <string name="card_style_not_found">Card Style not found</string>
    <string name="card_style_define_style">Please define a style for this card type, first by selecting question and answer fields, then by customizing the appearance of the card.</string>

    <string name="card_style_all_fields_description">Drag from the available fields to the Question or Answer section above. You can scroll to see all available fields.</string>
    <string name="card_style_question_fields_description">Drag fields here to show them on the Question (top part).</string>
    <string name="card_style_answer_fields_description">Drag fields here to show them on the Answer (bottom part).</string>
    <string name="card_style_sound_fields_description">Drag fields which contain an Anki sound tag, they will be played upon revealing the answer.</string>

    <string name="card_style_question_empty">No Question fields defined. Drag fields to the Question section</string>
    <string name="card_style_answer_empty">No Answer fields defined. Drag fields to the Answer section</string>

    <!-- deck picker related messages -->
    <string name="deckpicker_ankidroid_not_found_title">AnkiDroid not found</string>
    <string name="deckpicker_ankidroid_not_found_description">This application requires AnkiDroid in order to run. Please install AnkiDroid and add some flashcard decks.</string>

    <string name="deckpicker_cannotlistdecks_title">Unable to retrieve Deck List</string>
    <string name="deckpicker_cannotlistdecks_description">Could not retrieve AnkiDroid deck list</string>

    <string name="deckpicker_nodecksfound_title">No Decks Found</string>
    <string name="deckpicker_nodecksfound_description">Could not find any flashcard decks. Please add some decks in AnkiDroid.</string>

    <string name="deckpicker_nocardsdue_title">All Reviews Done</string>
    <string name="deckpicker_nocardsdue_description">No due cards. You can schedule extra reviews from AnkiDroid if needed.</string>

    <string name="deckpicker_missingpermissions_title">Missing Permissions</string>
    <string name="deckpicker_missingpermissions_description">Permissions not granted, will not be able to list AnkiDroid decks.</string>

    <string name="review_request_title">Good Job ! Review session done</string>
    <string name="review_request_message">I spent nine months writing AnkiReview, to make reviewing more fun and give back to the Anki community. It would mean the world to me if you gave me a review!</string>

    <string name="review_help_question">Swipe down to reveal answer</string>
    <string name="review_help_answer">Swipe left to answer Bad, swipe right to answer Good. Or tap the button at the bottom to reveal more answer options.</string>

    <string name="whatsnew_v22">Added Dark Mode, added experimental Backgrounds and Teacher modes. These show backgrounds with parallax effects as you review. The set of image backgrounds is hardcoded to just one set for now. More backgrounds will be added based on user feedback. Enable these in Preferences.</string>
    <string name="whatsnew_v21">Review bottom bar now has a more compact look, and the number of quicktags is not limited to 5 anymore. Fixed a bug at startup.</string>
    <string name="whatsnew_title">What\'s new in AnkiReview</string>

    <string name="developer_email">ankireview@mailc.net</string>

</resources>
