<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            app:cardCornerRadius="5dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="15dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/review_deck_display_options"
                    android:textSize="25dp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/review_deck_display_anki"
                    android:textSize="18dp" />

                <Button
                    android:id="@+id/deck_display_use_anki"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Use Anki HTML/CSS style"
                    style="@style/Widget.AppCompat.Button.Colored"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/review_deck_display_ankireview"
                    android:textSize="18dp" />

                <Button
                    android:id="@+id/deck_display_use_ankireview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Use AnkiReview style"
                    style="@style/Widget.AppCompat.Button.Colored"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</FrameLayout>