<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/answer_notification_icon_size"
            android:layout_weight="2"
            android:tint="@color/answer_tag_suspend"
            app:srcCompat="@drawable/tag" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_marginLeft="@dimen/answer_notification_name_margin_left"
            android:text="@string/reviewer_action_add_quicktag"
            android:textSize="@dimen/answer_notification_name_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/bottomsheet_action_mark"
        android:clickable="true"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/answer_notification_icon_size"
            android:layout_weight="2"
            android:tint="@color/answer_tag_suspend"
            app:srcCompat="@drawable/tag" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_marginLeft="@dimen/answer_notification_name_margin_left"
            android:text="@string/reviewer_action_mark"
            android:textSize="@dimen/answer_notification_name_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/bottomsheet_action_mark_suspend"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/answer_notification_icon_size"
            android:layout_weight="2"
            android:tint="@color/answer_tag_suspend"
            app:srcCompat="@drawable/pause" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_marginLeft="@dimen/answer_notification_name_margin_left"
            android:text="@string/reviewer_action_mark_suspend"
            android:textSize="@dimen/answer_notification_name_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/bottomsheet_action_mark_bury"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/answer_notification_icon_size"
            android:layout_weight="2"
            android:tint="@color/answer_tag_suspend"
            app:srcCompat="@drawable/pause" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_marginLeft="@dimen/answer_notification_name_margin_left"
            android:text="@string/reviewer_action_mark_bury"
            android:textSize="@dimen/answer_notification_name_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >

        <ImageView
            android:id="@+id/answer_ease1_icon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/answer_notification_icon_size"
            android:layout_weight="1"
            android:tint="@color/answer_wrong"
            app:srcCompat="@drawable/cross_circle" />

        <TextView
            android:id="@+id/bad_answer_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|bottom"
            android:layout_marginLeft="@dimen/answer_notification_name_margin_left"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/ease_button_again"
            android:textSize="@dimen/answer_notification_name_size" />

        <TextView
            android:id="@+id/bad_answer_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="center"
            android:text="8.1 mo"
            android:textSize="@dimen/answer_notification_interval_size" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >

        <ImageView
            android:id="@+id/answer_ease3_icon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/answer_notification_icon_size"
            android:layout_weight="1"
            android:tint="@color/answer_good"
            app:srcCompat="@drawable/check_circle" />

        <TextView
            android:id="@+id/good_answer_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|bottom"
            android:layout_marginLeft="@dimen/answer_notification_name_margin_left"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/ease_button_good"
            android:textSize="@dimen/answer_notification_name_size" />

        <TextView
            android:id="@+id/good_answer_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="center"
            android:text="8.1 mo"
            android:textSize="@dimen/answer_notification_interval_size" />



    </LinearLayout>




</LinearLayout>